# unitree-deploy

./: .gitignore  DEPTH_VISION_DESIGN.md  MJDATA.TXT  README.md  README.zh-CN.md  controller.py  get_realsense.py  pyproject.toml  robot_config.py  sim_bridge.py  todo  viewer_backend.py  visualizer.py
ckpt/g1/: multi_ckpt.yaml  state_machine.yaml
ckpt/g1/loco_flat/: controller.yaml  policy-04-22_11-14.onnx  policy-04-22_11-14.yaml  policy.yaml
ckpt/g1/motion_tracking/: custom_observations.py  custom_policy.py  mjlab_motion_tracking_observations.py  mjlab_motion_tracking_policy.py  policy.yaml
ckpt/g1/unitree_rl_lab_flat/: policy.yaml
ckpt/g1/vanilla_ppo_flat/: policy.onnx  policy.yaml  policy_8000.onnx
ckpt/go2/dreamwaq_rough/: policy.onnx  policy.yaml  policy_5000.onnx
ckpt/go2/perceptive_locomotion/: README.md  camera.xml  policy.yaml  sensor_depth_camera.yaml  sensor_height_scan.yaml
ckpt/go2/vanilla_ppo_rough/: policy.onnx  policy.yaml  policy_10000.onnx
policy/: base_policy.py  observation.py
robot_model/b2/: visualizer.yaml
robot_model/g1/: g1.xml  visualizer.yaml
robot_model/go2/: visualizer.yaml
robot_model/scene/: flat_terrain.xml  rough_terrain.xml
src/unitree_deploy/: __init__.py
src/unitree_deploy/cli/: __init__.py  controller.py  plugin_template.py  sim_bridge.py  trajectory_recorder.py  trajectory_replay.py  visualizer.py
src/unitree_deploy/config/: __init__.py  defaults.py
src/unitree_deploy/obs/: __init__.py  exteropception_observation.py  observation.py  registry.py
src/unitree_deploy/policy/: __init__.py  base_policy.py  (+1 more)
(+40 files in other folders)
