[project]
name = "unitree-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.6.0",
    "onnxruntime>=1.24.4",
    "pyyaml>=6.0.2",
    "scipy>=1.17.1",
    "pynput"
]

[project.optional-dependencies]
viewer = [
    "trimesh",
    "viser>=1.0.26",
]

[project.scripts]
unitree-controller = "unitree_deploy.cli.controller:main"
unitree-plugin-template = "unitree_deploy.cli.plugin_template:main"
unitree-sim-bridge = "unitree_deploy.cli.sim_bridge:main"
unitree-visualizer = "unitree_deploy.cli.visualizer:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unitree_deploy = ["robot_model/**/*"]

[tool.setuptools.exclude-package-data]
unitree_deploy = ["robot_model/**/__pycache__/*", "robot_model/**/*.pyc"]
